--- a/static/index.html
+++ b/static/index.html
@@ -93,7 +93,7 @@
       <h1 class="logo">Lylo.</h1>
       <p class="tagline">Offline, secure AI for solicitors.</p>
       <ul class="bullets">
-        <li class="bullet">Built for Employment Law. Drafts and compiles documents such as Statement of Facts, ET1’s and Schedule of Loss’ with total accuracy and zero cloud risk.</li>
+        <li class="bullet">Lylo is a secure, retrieval based chat system, with specialist modules for Employment Law to assist with drafting Statements of Fact, ET1s, and Schedules of Loss.</li>
       </ul>
       <a href="/research" class="cta" id="getStarted">Take part</a>
       <div class="note">In development stages. Register interest.</div>
